WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
118976
Frequent MESSAGE_CHECK failures in WebPageProxy::didReceiveEvent
https://bugs.webkit.org/show_bug.cgi?id=118976
Summary
Frequent MESSAGE_CHECK failures in WebPageProxy::didReceiveEvent
Alexey Proskuryakov
Reported
2013-07-22 11:16:46 PDT
We are seeing frequent MESSAGE_CHECK failures when handling WebPageProxy.DidReceiveEvent. I cannot reproduce this. <
rdar://problem/14155030
>
Attachments
proposed fix
(1.36 KB, patch)
2013-07-22 11:21 PDT
,
Alexey Proskuryakov
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-07-22 11:21:21 PDT
Created
attachment 207256
[details]
proposed fix
Alexey Proskuryakov
Comment 2
2013-07-22 11:26:01 PDT
Committed <
http://trac.webkit.org/r152984
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug