        Frequent MESSAGE_CHECK failures in WebPageProxy::didReceiveEvent         https://bugs.webkit.org/show_bug.cgi?id=118976         <rdar://problem/14155030>

Reviewed by Sam Weinig.

        * UIProcess/WebPageProxy.cpp: (WebKit::WebPageProxy::resetStateAfterProcessExited):
        Clear m_gestureEventQueue, just like we clear all other event queues here.



Canonical link: https://commits.webkit.org/136815@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152984 268f45cc-cd09-0410-ab3c-d52691b4dbfc